--- a/Bootstrap4/conFusion/css/styles.css
+++ b/Bootstrap4/conFusion/css/styles.css
@@ -26,3 +26,13 @@
     margin: 0px;
     color: #0f0f0f;
 }
+
+body{
+    padding: 50px 0px 0px opx;
+    z-index: 0;
+}
+
+.navbar-dark{
+    background: #512DA8;
+    
+}
